@@ -1,7 +1,8 @@
 Revision history for Syntax-Check
 
 1.04 UNREL
-        -
+        - Removed prereq of Module::Installed::Tiny, as the dependency chain
+          is significant for test prerequisites
 
 1.03    2020-12-07
         - Added Capture::Tiny to test prereqs (CPAN installs were failing)
